--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,12 @@ body {
     margin: 40px auto 20px;
 }
 
+.error-message {
+    color: red;
+    font-size: 16px;
+    display: none;
+}
+
 .article-title {
     font-size: 20px;
     font-weight: bold;
